--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^7.2.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-better-tailwindcss": "^4.0.1",
+    "jiti": "^2.6.1"
   }
 }
