--- a/package.json
+++ b/package.json
@@ -13,16 +13,35 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^4.0.0",
+    "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.6.0",
+    "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.0",
+    "nuxt-lucide-icons": "^2.0.0",
+    "reka-ui": "^2.7.0",
+    "shadcn-nuxt": "^2.4.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "vaul-vue": "^0.4.1",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
+    "vue-input-otp": "^0.3.2",
+    "vue-router": "^4.6.4",
+    "vue-sonner": "^2.0.9",
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.2.0",
     "eslint": "^9.39.2",
     "eslint-plugin-better-tailwindcss": "^4.0.1",
-    "jiti": "^2.6.1"
+    "jiti": "^2.6.1",
+    "tw-animate-css": "^1.4.0"
   }
 }
