chore: exclude shadcn-ui from vscode search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+  "search.exclude": {
+    "**/shadcn-ui/**": true
+  },
+  "files.exclude": {
+    "**/shadcn-ui/**": true
+  },
   "prettier.enable": false,
   "editor.codeActionsOnSave": {
     "source.fixAll": "always"
